force-app/main/default/objects/Content_Item__c/Content_Item__c.object-meta.xml
<CustomObject>
    <description>Template for Glossary, fee, or other content item.</description>
    <label>Content Item</label>
    <nameField>
        <label>Content Item Term/Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>