force-app/main/default/objects/Content_Item__c/fields/About_TrueCost__c.field-meta.xml
<CustomField>
    <fullName>About_TrueCost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display this page in the About TrueCost section</description>
    <inlineHelpText>Display this page in the About TrueCost section</inlineHelpText>
    <label>About TrueCost?</label>
    <type>Checkbox</type>
</CustomField>