force-app/main/default/objects/Content_Item__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <description>The deck or subtitle.  Only appears to customers if deck=true on the contentviewer component</description>
    <inlineHelpText>The deck or subtitle.  Only appears to customers if deck=true on the contentviewer component</inlineHelpText>
    <label>Deck</label>
    <length>100</length>
    <type>Text</type>
</CustomField>