force-app/main/default/objects/Content_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of content for context purposes.</description>
    <inlineHelpText>Short description of content for context purposes.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>