force-app/main/default/objects/Content_Item__c/fields/Draft_Content__c.field-meta.xml
<CustomField>
    <fullName>Draft_Content__c</fullName>
    <description>What content is proposed to replace the published content</description>
    <inlineHelpText>What content is proposed to replace the published content</inlineHelpText>
    <label>Draft Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>