force-app/main/default/objects/Content_Item__c/fields/Draft_Deck__c.field-meta.xml
<CustomField>
    <fullName>Draft_Deck__c</fullName>
    <label>Draft Deck</label>
    <length>100</length>
    <type>Text</type>
</CustomField>