force-app/main/default/objects/Content_Item__c/fields/Draft_Title__c.field-meta.xml
<CustomField>
    <fullName>Draft_Title__c</fullName>
    <label>Draft Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>