force-app/main/default/objects/Content_Item__c/fields/Gas_Choice_Related__c.field-meta.xml
<CustomField>
    <fullName>Gas_Choice_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this content for Gas Choice?</description>
    <inlineHelpText>Is this content for Gas Choice?</inlineHelpText>
    <label>Gas Choice Related?</label>
    <type>Checkbox</type>
</CustomField>