force-app/main/default/objects/Content_Item__c/fields/Glossary_Term__c.field-meta.xml
<CustomField>
    <fullName>Glossary_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a general glossary term/item?</description>
    <inlineHelpText>Is this a general glossary term/item?</inlineHelpText>
    <label>Glossary Term?</label>
    <type>Checkbox</type>
</CustomField>