force-app/main/default/objects/Content_Item__c/fields/Legal_Editing__c.field-meta.xml
<CustomField>
    <fullName>Legal_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Editing</label>
    <type>Checkbox</type>
</CustomField>