force-app/main/default/objects/Content_Item__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this content available to the TrueCost website?</description>
    <inlineHelpText>Is this content available to the TrueCost website?</inlineHelpText>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>