force-app/main/default/objects/Content_Item__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <description>Formula field that reads the checkboxes to see what state the content item is in</description>
    <formula>if( CorpComm_Editing__c, &#39;CorpComm Editing&#39;, 
   if( Legal_Editing__c, &#39;Legal Editing&#39;, 
      if( Final_Review__c,  &#39;Final Review&#39;, 
         if( Published__c, &#39;Published&#39;,
            &#39;Draft&#39;
         )
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue</label>
    <type>Text</type>
</CustomField>