force-app/main/default/objects/Content_Item__c/fields/run_copy_trigger__c.field-meta.xml
<CustomField>
    <fullName>run_copy_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells the system to copy the rich text field from draft to production.  It&#39;s a system-only thing.  The workflow should set this as a final action.</description>
    <inlineHelpText>Tells the system to copy the rich text field from draft to production.  It&#39;s a system-only thing.  The workflow should set this as a final action.</inlineHelpText>
    <label>run copy trigger</label>
    <type>Checkbox</type>
</CustomField>