force-app/main/default/objects/Content_Item__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title for the content item.  May be used by the content viewer component and visible to the users only if the page declaration says to show the title.</description>
    <inlineHelpText>Title for the content item.  May be used by the content viewer component and visible to the users only if the page declaration says to show the title.</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>