force-app/main/default/objects/Content_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the term/item fee-related?</description>
    <inlineHelpText>Is the term/item fee-related?</inlineHelpText>
    <label>Fee?</label>
    <type>Checkbox</type>
</CustomField>