force-app/main/default/objects/Content_Item__c/recordTypes/Marketing_Item.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Item</fullName>
    <active>true</active>
    <description>Email templates and other marketing-specific items.  Items should be attached as files after saving name &amp; description.</description>
    <label>Marketing Item</label>
</RecordType>