force-app/main/default/objects/Content_Item__c/recordTypes/Site_Content_Item.recordType-meta.xml
<RecordType>
    <fullName>Site_Content_Item</fullName>
    <active>true</active>
    <description>Site content including glossary terms and page content.</description>
    <label>Site Content Item</label>
</RecordType>