force-app/main/default/objects/Content_Item__c/listViews/CES_Market_Reports_Related.listView-meta.xml
<ListView>
    <fullName>CES_Market_Reports_Related</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>commentary</value>
    </filters>
    <label>CES Market Reports Related</label>
    <language>en_US</language>
</ListView>