force-app/main/default/objects/Content_Item__c/listViews/CorpCommEditing_Content_Item.listView-meta.xml
<ListView>
    <fullName>CorpCommEditing_Content_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>CorpComm Editing</label>
    <queue>CorpCommEditing</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>