force-app/main/default/objects/Content_Item__c/listViews/Draft.listView-meta.xml
<ListView>
    <fullName>Draft</fullName>
    <columns>NAME</columns>
    <columns>Definition__c</columns>
    <columns>Description__c</columns>
    <columns>Draft_Content__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Final_Review__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Legal_Editing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CorpComm_Editing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Published__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Draft</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>