force-app/main/default/objects/Content_Item__c/listViews/Gas_Choice_Related.listView-meta.xml
<ListView>
    <fullName>Gas_Choice_Related</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Draft_Title__c</columns>
    <columns>Draft_Deck__c</columns>
    <columns>Draft_Content__c</columns>
    <columns>Published__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gas_Choice_Related__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Gas Choice Related</label>
</ListView>