force-app/main/default/objects/Content_Item__c/listViews/Published.listView-meta.xml
<ListView>
    <fullName>Published</fullName>
    <columns>NAME</columns>
    <columns>Definition__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Glossary_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Published__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Published</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>